<resources>
    <string name="app_name">Pruebas tema 5</string>
    <string name="pruebasSQLite">Pruebas SQLite</string>
    <string name="tituloInsertar">SQLite: Insertar Usuario</string>
    <string name="nombreUsuario">Nombre de Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="insertar">Insertar</string>
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    <string name="tituloModificar">SQLite: Modificar Usuario</string>
    <string name="listaUsuarios">Listado de usuarios:</string>
    <string name="usuarioInsertado">Usuario Insertado</string>
    <string name="usuarioModificado">Usuario Modificado</string>
    <string name="errorInsertandoUsuario">Error insertando usuario</string>
    <string name="errorModificandoUsuario">Error modificando usuario</string>
    <string name="txtPruebaAlmacenamiento">Pruebas de Almacenamiento</string>
    <string name="almacenamientoInterno">Almacenamiento Interno Privado</string>
    <string name="almacenamientoExternoPrivado">Almacenamiento Externo Privado</string>
    <string name="almacenamientoExternoPublico">Almacenamiento Externo Público</string>
    <string name="machacarFichero">Machacar Fichero</string>
    <string name="concatenarContenido">Concatenar al final</string>
    <string name="nombreFichero">Nombre del fichero</string>
    <string name="contenido">Escribe aqui el contenido...</string>
    <string name="guardar">Guardar</string>
    <string name="mostrar">mostrar</string>
    <string name="rutaActual">Ruta Actual</string>
    <string name="noImplementado">Aun no esta implementado</string>
    <string name="ficheroEscrito">Se ha escrito el fichero</string>
    <string name="haSidoAbierto">abierto con exito</string>
    <string name="nombrFicheroBorrado">¡Borrado con éxito!.</string>
    <string name="errorAlBorrar">Error al borrar: </string>
    <string name="seleccionadoInternoPrivado">Seleccionado almacenamiento interno privado</string>
    <string name="seleccionadoExternoPrivado">Seleccionado almacenamiento externo privado</string>
    <string name="seleccionadoExternoPublico">Seleccionado almacenamiento externo público</string>
    <string name="txtCopiadoDeDocumentos">Copiado de Documentos</string>
    <string name="copiar">Copiar</string>
</resources>