<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/elementoRaiz"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/moss" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/elementoConFondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentWhite">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_name"
            android:textColor="@color/mainText"
            android:textSize="50sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="irAPruebasSQLite"
            android:text="@string/pruebasSQLite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnPruebaAlmacenamiento"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:onClick="irAPruebasDeAlmacenamiento"
            android:text="@string/txtPruebaAlmacenamiento"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCopiadoDeDocumentos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="irCopiadoDeDocumentos"
            android:text="@string/txtCopiadoDeDocumentos"
            app:layout_constraintBottom_toTopOf="@+id/btnPruebaAlmacenamiento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/preferencias"
            android:onClick="irAPrefencias"
            app:layout_constraintBottom_toTopOf="@+id/btnCopiadoDeDocumentos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>